# arxiv-to-prompt

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/arxiv_to_prompt/: __init__.py  cli.py  core.py
tests/: test_core.py
