[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-to-prompt"
version = "0.1.1"
description = "transform arXiv papers into a single latex prompt for LLMs"
readme = "README.md"
authors = [{ name = "Takashi Ishida" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/takashiishida/arxiv-to-prompt"
Changelog = "https://github.com/takashiishida/arxiv-to-prompt/releases"
Issues = "https://github.com/takashiishida/arxiv-to-prompt/issues"
CI = "https://github.com/takashiishida/arxiv-to-prompt/actions"

[project.scripts]
arxiv-to-prompt = "arxiv_to_prompt.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=arxiv_to_prompt --cov-report=term-missing"
testpaths = ["tests"] 